myconfifiles/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  #The rules below are used for routing
spec:
  rules:
  - host: dashboard.com #Needs to be a valid domain address; map to node IP address/entrypoint
    http:
      paths:
      - backend: #This is where the request will be routed to
          serviceName: kubernetes-dashboard #redirected internally to our service, needs servicename!
          servicePort: 80
#paths is whatever comes after the URLname
